# tm-osm-processor-v1

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: main.py
tools/: __init__.py  math_tools.py  osm_tools.py
